--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -16,6 +16,9 @@
   background-color: #337ab7;
 }
 
+
+/* Jumbotron */
+
 .docs-jumbotron {
   background-color: #3f51b5;
   color: #fff;
@@ -28,17 +31,59 @@
   opacity: 0.5;
 }
 
-.docs-header {
+
+.docs-carbonads-container {
   position: relative;
 }
 
-.docs-header > small {
-  position: absolute;
-  right: 0;
-  bottom: 10px;
-  font-size: 16px;
-  line-height: 20px;
+.docs-carbonads {
+  max-width: 350px;
+  padding: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  overflow: hidden;
 }
+
+.carbon-wrap {
+  overflow: hidden;
+}
+
+.carbon-img {
+  clear: left;
+  float: left;
+  display: block;
+}
+
+.carbon-text,
+.carbon-poweredby {
+  display: block;
+  margin-left: 140px;
+}
+
+.carbon-text,
+.carbon-text:hover,
+.carbon-text:focus {
+  color: #fff;
+  text-decoration: none;
+}
+
+.carbon-poweredby,
+.carbon-poweredby:hover,
+.carbon-poweredby:focus {
+  color: #ddd;
+  text-decoration: none;
+}
+
+@media (min-width: 992px) {
+  .docs-carbonads {
+    position: absolute;
+    right: 0;
+    bottom: 5px;
+  }
+}
+
+
+/* Content */
 
 .dropzone {
   padding: 150px 15px;
