--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -7,33 +7,25 @@ body {
 
 .browserupgrade {
   margin: 0;
-  padding: .5em 1em;
+  padding: .5rem 1rem;
   background-color: #fcfcfc;
   text-align: center;
-}
-
-.btn-group > .btn {
-  padding-right: 12px;
-  padding-left: 12px;
-}
-
-.btn-group > label {
-  margin-bottom: 0;
 }
 
 
 /* Jumbotron */
 
 .docs-jumbotron {
-  color: #fff;
   background-color: #0074d9;
   border-radius: 0;
+  color: #fff;
 }
 
 .docs-jumbotron .version {
-  font-size: 16px;
+  font-size: .875rem;
   color: #fff;
-  opacity: 0.8;
+  filter: alpha(opacity=50);
+  opacity: 0.5;
 }
 
 @media (min-width: 992px) {
@@ -44,15 +36,15 @@ body {
 }
 
 .docs-carbonads-container {
-  font-size: 14px;
   position: relative;
 }
 
 .docs-carbonads {
-  max-width: 350px;
-  padding: 16px;
+  font-size: .875rem;
+  max-width: 360px;
+  padding: 1rem;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: .25rem;
   overflow: hidden;
 }
 
@@ -90,175 +82,32 @@ body {
   .docs-carbonads {
     position: absolute;
     right: 0;
-    bottom: 0;
+    bottom: -1.25rem;
   }
-}
-
-
-/* Content */
-
-.img-container,
-.img-preview {
-  background-color: #f7f7f7;
-  width: 100%;
-  text-align: center;
-}
-
-.img-container {
-  min-height: 200px;
-  max-height: 485px;
-  margin-bottom: 20px;
-}
-
-@media (min-width: 768px) {
-  .img-container {
-    min-height: 485px;
-  }
-}
-
-.img-container > img {
-  max-width: 100%;
-}
-
-.docs-preview {
-  margin-right: -15px;
-}
-
-.img-preview {
-  float: left;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  overflow: hidden;
-}
-
-.img-preview > img {
-  max-width: 100%;
-}
-
-.preview-lg {
-  width: 256px;
-  height: 144px;
-}
-
-.preview-md {
-  width: 128px;
-  height: 72px;
-}
-
-.preview-sm {
-  width: 64px;
-  height: 36px;
-}
-
-.preview-xs {
-  width: 32px;
-  height: 18px;
-  margin-right: 0;
-}
-
-.docs-data > .input-group {
-  margin-bottom: 10px;
-}
-
-.docs-data > .input-group > label {
-  min-width: 80px;
-}
-
-.docs-data > .input-group > span {
-  min-width: 50px;
-}
-
-.docs-buttons > .btn,
-.docs-buttons > .btn-group,
-.docs-buttons > .form-control {
-  margin-right: 4px;
-  margin-bottom: 8px;
-}
-
-.docs-toggles > .btn,
-.docs-toggles > .btn-group,
-.docs-toggles > .dropdown {
-  margin-bottom: 10px;
-}
-
-.docs-tooltip {
-  display: block;
-  margin: -8px -12px;
-  padding: 8px 12px;
-}
-
-@media (max-width: 400px) {
-  .btn-group-crop {
-    margin-right: -16px!important;
-  }
-
-  .btn-group-crop > .btn {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-}
-
-.docs-aspect-ratios,
-.docs-view-modes {
-  width: 100%;
-}
-
-.docs-aspect-ratios > .btn {
-  width: 20%;
-}
-
-.docs-view-modes > .btn {
-  width: 25%;
-}
-
-.docs-options .dropdown-menu {
-  width: 100%;
-}
-
-.docs-options .dropdown-menu > li {
-  padding: 3px 20px;
-}
-
-.docs-options .dropdown-menu > li:hover {
-  background-color: #f7f7f7;
-}
-
-.docs-options .dropdown-menu > li > label {
-  display: block;
-  width: 105%;
-}
-
-.docs-cropped .modal-body {
-  text-align: center;
-}
-
-.docs-cropped .modal-body > img,
-.docs-cropped .modal-body > canvas {
-  max-width: 100%;
 }
 
 
 /* Footer */
 
 .docs-footer {
+  font-size: .875rem;
   overflow: hidden;
 }
 
-.links {
-  text-align: center;
-  margin-bottom: 32px;
+.docs-footer .nav {
+  margin-bottom: 1rem;
 }
 
 .heart {
   position: relative;
   display: block;
   width: 100%;
-  height: 32px;
-  margin-top: 16px;
-  margin-bottom: 16px;
+  height: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 0;
   color: #ddd;
-  font-size: 18px;
-  line-height: 32px;
+  font-size: 1.125rem;
+  line-height: 2rem;
   text-align: center;
 }
 
@@ -280,11 +129,12 @@ body {
 .heart:after {
   position: relative;
   z-index: 1;
-  padding-left: 8px;
-  padding-right: 8px;
+  padding-left: .5rem;
+  padding-right: .5rem;
   background-color: #fff;
   content: "♥";
 }
+
 
 
 /* Google Code Prettify */
